[package]
name = "m5stack_esp32s3_display_rs"
version = "0.1.0"
authors = ["zinntikumugai <uesitananame55@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.84"

[[bin]]
name = "m5stack_esp32s3_display_rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-hal = "1.0.0"
esp-idf-sys = "0.36.1"
esp-idf-hal = "0.45.2"
embedded-graphics = "0.8"
display-interface-spi = "0.5"
mipidsi = "0.9.0"
tinybmp = "0.6.0"
esp-backtrace = { version = "0.15.1", features = ["esp32s3", "exception-handler", "println", "colors"] }
esp-println = { version = "0.13.1", features = ["esp32s3", "auto"] }

[build-dependencies]
embuild = "0.33"
